force-app/main/default/objects/Health_professional_reference__c/Health_professional_reference__c.object-meta.xml
<CustomObject>
    <label>Health professional reference</label>
    <nameField>
        <label>Health professional reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health professional references</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>