force-app/main/default/objects/Health_professional_reference__c/fields/Health_professional__c.field-meta.xml
<CustomField>
    <fullName>Health_professional__c</fullName>
    <label>Health professional</label>
    <referenceTo>Health_professional__c</referenceTo>
    <relationshipLabel>Health professional references</relationshipLabel>
    <relationshipName>Health_professional_references</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>