force-app/main/default/objects/Health_professional_reference__c/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <label>url</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>