force-app/main/default/objects/Health_professional_reference__c/fields/words_cloud__c.field-meta.xml
<CustomField>
    <fullName>words_cloud__c</fullName>
    <label>words cloud</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>